# Django-School-2

./: README.md  notes.md  pyproject.toml
playground/: views.py
playground/templates/: hello.html
storefront/: settings.py  urls.py
