[tool.poetry]
name = "django-school-2"
version = "0.1.0"
description = ""
authors = ["Jack Perry <jack.e.perry@outlook.com>"]
readme = "README.md"
packages = [{include = "django_school_2"}]

[tool.poetry.dependencies]
python = "~3.9"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
